fix(CSS): Correct spacing and titles

--- a/styles.css
+++ b/styles.css
@@ -267,9 +267,13 @@ h2::first-letter {
     }
     
     ul {
-        margin: 10px 0;
+        margin: 3px 0;
         padding-left: 1.5em;
         list-style-type: disc;
+    }
+    
+    ul.certifications-list {
+        margin: 10px 0;
     }
     
     ul li {
@@ -278,6 +282,10 @@ h2::first-letter {
     
     p {
         margin: 0.3em 0;
+    }
+    
+    .section div[style*="padding-left"] p + ul {
+        margin-top: 2px;
     }
 }
 
